fixed node branch alignment issue

--- a/src/Layout.css
+++ b/src/Layout.css
@@ -1,13 +1,13 @@
 header {
     position: fixed;
-    z-index: 150;
+    z-index: 125;
     width: 100%;
     top: 0;
     left: 0;
     right: 0;
     height: 55px;
     background-color: #f9f9f9;
-    box-shadow:0px 1px 1px rgba(0,0,0,.3);
+    box-shadow:2px 2px 8px rgba(0,0,0,.3);
 }
 .sidebar {
     position: fixed;
