--- a/src/Node.css
+++ b/src/Node.css
@@ -28,11 +28,14 @@
     border-top: 4px solid #a5a5a5;
     width: 50%;
     height: 3em;
+    margin-left: -40px;
+    margin-right: 40px;
 }
 .tree li::after {
     right: auto;
     left: 50%;
     border-left: 4px solid #a5a5a5;
+    margin-left: -40px;
 }
 .tree li:only-child::after, .tree li:only-child::before {
     display: none;
@@ -46,9 +49,11 @@
 .tree li:last-child::before {
     border-right: 4px solid #a5a5a5;
     border-radius: 0 5px 0 0;
+    margin-right: 40px;
 }
 .tree li:first-child::after {
     border-radius: 5px 0 0 0;
+    margin-left: -40px;
 }
 
 .tree ul ul::before {
@@ -59,6 +64,7 @@
     border-left: 4px solid #a5a5a5;
     width: 0;
     height: 3em;
+    margin-left: -40px;
 }
 
 .tree li a {
@@ -70,6 +76,7 @@
     color: #333;
     position: relative;
     top: 1px;
+    margin-left: -40px;
 }
 
 textarea{
